--- a/static/login.html
+++ b/static/login.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="">
 		<meta name="format-detection" content="telephone=no">
 		<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-		<title>demo</title>
+		<title>lanxx blog</title>
 		<link rel="stylesheet" type="text/css" href="common/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="common/css/style.css" />
 	</head>
@@ -18,20 +18,20 @@
 			<div class="login">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<h3 class="panel-title">登陆</h3>
+						<h3 class="panel-title">Sign in</h3>
 					</div>
 					<div class="panel-body">
 						<div class="form-group">
-							<label for="username">用户名</label>
-							<input type="email" class="form-control" id="username" placeholder="请输入用户名">
+							<label for="username">username</label>
+							<input type="email" class="form-control" id="username" placeholder="username">
 						</div>
 						<div class="form-group">
-							<label for="pwd">密码</label>
-							<input type="password" class="form-control" id="pwd" placeholder="请输入密码">
+							<label for="pwd">pwd</label>
+							<input type="password" class="form-control" id="pwd" placeholder="pwd">
 						</div>
 					</div>
 					<div class="panel-footer">
-						<a href="javascript:login();" class="btn btn-success">登陆</a>（账号不存在，直接注册）
+						<a href="javascript:login();" class="btn btn-success">login</a>(Account does not exist, direct registration)
 					</div>
 				</div>
 				<ul class="bg-bubbles">
