--- a/static/index.html
+++ b/static/index.html
@@ -184,7 +184,7 @@
 			
 			function formatDate(date) {
 				var d = new Date(date);
-				return d.getFullYear() + '年' + (d.getMonth() + 1) + '月' + d.getDate() + '日';
+				return d.getFullYear() + '年' + (d.getMonth() + 1) + '月' + d.getDate() + '日 ' + d.getHours() + ':' + d.getMinutes();
 			}
 		</script>
 	</body>
